# docs/swagger.json
@@ -125,7 +125,7 @@
         },
         "/auth/reset-password-confirm": {
             "post": {
-                "description": "verify secret code for reset password",
+                "description": "reset password",
                 "consumes": [
                     "application/json"
                 ],
@@ -143,6 +143,63 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/domain.ResetPasswordInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.okResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/reset-password-verify-phone-number": {
+            "post": {
+                "description": "verify secret code for reset password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "parameters": [
+                    {
+                        "description": "verify phone number",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.VerifyPhoneNumberInput"
                         }
                     }
                 ],
@@ -2065,8 +2122,7 @@
             "type": "object",
             "required": [
                 "new_password",
-                "phone_number",
-                "secret_code"
+                "phone_number"
             ],
             "properties": {
                 "confirm_new_password": {
@@ -2078,9 +2134,6 @@
                     "minLength": 8
                 },
                 "phone_number": {
-                    "type": "string"
-                },
-                "secret_code": {
                     "type": "string"
                 }
             }
@@ -2118,6 +2171,21 @@
                     "type": "string",
                     "maxLength": 64,
                     "minLength": 8
+                }
+            }
+        },
+        "domain.VerifyPhoneNumberInput": {
+            "type": "object",
+            "required": [
+                "phone_number",
+                "secret_code"
+            ],
+            "properties": {
+                "phone_number": {
+                    "type": "string"
+                },
+                "secret_code": {
+                    "type": "string"
                 }
             }
         },
